# esp-snapcast

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  cfg.toml.example  replacer.py  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: ci.yml
src/: cpu.rs  main.rs  player.rs  util.rs  wifi.rs
