[package]
name = "esp-snapcast"
version = "0.1.0"
authors = ["David Ventura <davidventura27@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
snapcast-client = { git = "https://github.com/DavidVentura/snapcast-client", branch = "master", features = ["flac"] } # "opus"
# snapcast-client = { version = "0.1.0", path = "../snapcast-client", features = ["flac"] } # "opus"
anyhow = "1.0.81"
esp-idf-hal = "0.43.1"
esp-idf-sys = "0.34.1"
heapless = "0.8.0"
toml-cfg = "0.2.0"

[build-dependencies]
embuild = "0.31.3"
anyhow = "=1.0.81"
toml-cfg = "0.2.0"
