[package]
name = "esp-snapcast"
version = "0.1.0"
authors = ["David Ventura <davidventura27@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
lto = true
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
# snapcast-client = { git = "https://github.com/DavidVentura/snapcast-client", branch = "master", features = ["opus"] } # "opus"
snapcast-client = { path = "../snapcast-client", default-features = false, features = ["opus", "playback"] }
anyhow = "1.0.81"
esp-idf-svc = { version = "0.51", default-features = false }
esp-idf-hal = "0.45.2"
esp-idf-sys = "0.36.1"
heapless = "0.8.0"

[build-dependencies]
embuild = { version = "0.31.3", features = ["espidf"] }

